# atc

./: .gitignore  Pipfile  README.md  atc_data.json  engine.py  input_padatious.py  nntts.py  pyproject.toml  reply.py  routing.py  script.txt  speech.py
atc/: __main__.py  db.py
atc/com/: common.py  converters.py  input.py  output.py  snips_input.py  speech.py  text.py
atc/connector/: dummy.py
atc/controllers/: __init__.py  common.py  coordinator.py  flight.py  preflight.py
atc/controllers/connector/: __init__.py  dummy.py  xplane.py
atc/fpl/: __init__.py  common.py  simbrief.py
atc/hmi/interactive/: speech.py  ui.py
atc/hmi/testing/: test.py
atc/nav/: geo.py  ground.py  models.py
atc/resources/: adapt.json  replies.json  replies.yml
atc/resources/snips_intents/: entities.yml  flight.yml  ground.yaml
docs/: srs.md
